<resources>
    <string name="app_name">TMK Midline-2019</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="dcstatus"> انٽرويو جو نتيجو</string>
    <string name="istatus1"> مڪمل ٿيو </string>
    <string name="istatus2"> انڪار ڪيو </string>
    <string name="istatus3"> گھر مستقل طور بند آھي </string>
    <string name="istatus4"> گھر عارضي طور بند آھي </string>
    <string name="istatus5"> رڪيل </string>
    <string name="istatus6"> گھر خالي ھو </string>
    <string name="istatus7"> مڪمل نه ٿيو </string>
    <string name="istatus8">گھر ۾ پنج سال کان گھٽ جو ٻار نه آهي</string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٽرويو شروع ڪريو </string>
    <string name="male"> مرد</string>
    <string name="female"> عورت </string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="dkn"> خبر نه آھي </string>
    <string name="refused"> Refused </string>
    <string name="day"> ڏينهن </string>
    <string name="month"> مهينو </string>
    <string name="year"> سال </string>
    <string name="hour"> ڪلاڪ </string>
    <string name="min"> منٽ </string>
    <string name="other"> ٻيو ڪو وضاحت ڪريو. </string>
    <string name="name">ٻار جو نالو</string>
    <string name="Respondent">respondent</string>
    <string name="tbmid"> ماں کا نام</string>
    <string name="taheading">SECTION A: HH Identification</string>
    <string name="tcheading">SECTION C: Introduction And Consent</string>
    <string name="tdheading">SECTION D: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="thaheading">سيڪشن E: ٻار جي صحت(دستن جي بيماري جي باري ۾)</string>
    <string name="tfheading">سيڪشن F: ساھ کڻڻ ۾ تڪليف</string>
    <string name="tgheading">سيڪشن G: حفاظتي ٽڪن جي معلومات</string>
    <string name="thheading">SECTION H: BREAST FEEDING AND NUTRITION </string>
    <string name="tiheading">سيڪشن I: پاڻي ۽ صفائي </string>
    <string name="tjheading">  سيڪشن J: ھٿ ڌوئڻ</string>
    <string name="tkheading">SECTION K: WASH (Spot Check)</string>
    <string name="td01"> گهرڀاتين جو ڪل تعداد </string>
    <string name="td02">  مرد </string>
    <string name="td03">  عورتون </string>
    <string name="td04">  ٻار0 ڏينهن کان 5سالن تائين(ڇوڪرا) </string>
    <string name="td05">  ٻار0 ڏينهن کان 5سالن تائين (ڇوڪريون) </string>
    <string name="td06">  ٻار 5 کان 14 سالن تائين جي عمر جا (ڇوڪرا) </string>
    <string name="td07">  ٻار 5 کان 14 سالن تائين جي عمر جا (ڇوڪريون) </string>
    <string name="td08">  شادي شده عورتون 15کان 49 سالن تائين </string>
    <string name="tdsub"> گهر۾موجود 5 سالن کان گھٽ عمروارن ٻارن جا نالا۽ پيدائش جي تاريخ (ڪارڊ/سرٽيفيڪٽ/ياداشت ذريعي پيدائش جي تاريخ) لکو پاڻمرادوطريقي ڪارسان01 کان شروع ڪيو ويندو. </string>
    <string name="td00"> ٻارجوسريل نمبر </string>
    <string name="td04a"> ڏينهن </string>
    <string name="td04b"> مھينو </string>
    <string name="td04c"> سال </string>
    <string name="td05a"> سال </string>
    <string name="td05b"> مھينا </string>
    <string name="td09"> ماءُ جو نالو </string>
    <string name="td10">عمر  </string>
    <string name="td11"> ماءُ جي تعليم  </string>
    <string name="td12"> ڌنڌو </string>
    <string name="td13"> ڇا (عورت جو نالو) کي5 سالن کان گھٽ عمرجا ٻار آھن؟  </string>
    <string name="td14"> ٻارجونالو  </string>
    <string name="td15"> جنس </string>
    <string name="td16"> پيدائش جي تاريخ </string>
    <string name="td17"> عمر (جيڪڏھن توھان کي پيدائش جي تاريخ ياد نه آھي ته عمر ياداشت ذريعي لکو فقط مھينا ۽ سال) </string>
    <string name="checkHHpresent"> Selected Head name present (A/C Line listing) </string>
    <string name="ta01"> Cluster Number </string>
    <string name="ta02"> Cluster type </string>
    <string name="ta02a"> LHW Covered </string>
    <string name="ta02b"> LHW UnCovered </string>
    <string name="ta02c"> LHW Partially Covered </string>
    <string name="ta03"> Name of Tehsil/Taluka </string>
    <string name="ta03a"> Tando Mohammad Khan </string>
    <string name="ta03b"> Tando Ghulam Hyder </string>
    <string name="ta03c"> Bulri Shah Karim </string>
    <string name="ta04"> Name of Union Council </string>
    <string name="ta04a"> Lakhat </string>
    <string name="ta04b"> Shaikh Bhirkio </string>
    <string name="ta04c"> Tando Saeendad </string>
    <string name="ta04d"> TMK 01 </string>
    <string name="ta04e"> TMK 02 </string>
    <string name="ta04f"> TMK 03 </string>
    <string name="ta04g"> Dando </string>
    <string name="ta04h"> Ghulam Shah Bagrani </string>
    <string name="ta04i"> Nazarpur </string>
    <string name="ta04j"> Tando Ghulam Hyder </string>
    <string name="ta04k"> Allah Yar Turk </string>
    <string name="ta04l"> Jinhan Soomro </string>
    <string name="ta04m"> Bulri Shah Karim </string>
    <string name="ta04n"> Saeed Khan Lund </string>
    <string name="ta04o"> Mullakatiar </string>
    <string name="ta04p"> Saeed Matto </string>
    <string name="ta04q"> Saeedpur </string>
    <string name="ta05"> House No </string>
    <string name="ta05h"> House No </string>
    <string name="ta05kh"> Khandan number </string>
    <string name="ta05u"> Gas or electricity bill No </string>
    <string name="ta06"> Village </string>
    <string name="ta07"> Block/mohalla </string>
    <string name="ta08"> Street </string>
    <string name="ta09"> ڇا ھاڻي آءٌ انٽرويو شروع ڪري سگھان ٿي/ٿو؟ </string>
    <string name="ta09c"> گھرو آف / اجازت دستياب ناهي. </string>
    <string name="tc03"> جواب ڏيڻ واري جو نالو. </string>
    <string name="tc04"> جواب ڏيڻ واري جي جنس. </string>
    <string name="tc05"> جواب ڏيندڙ جي عمر. </string>
    <string name="ta10"> Is there any under 5 child exist? </string>
    <string name="ta11"> Total under 5 child? </string>
    <string name="tbAge"> تاريخ پيدائش / عمر </string>
    <string name="tbAge02"> عمر </string>
    <string name="tbdob01"> تاريخ پيدائش </string>
    <string name="tb01"> گھر ڀاتيءَ جو سريل نمبر </string>
    <string name="tb02"> نالو </string>
    <string name="tb03"> گھر جي سربراھ سان رشتو </string>
    <string name="tb03a"> Head of HH </string>
    <string name="tb03b"> Wife/Husband </string>
    <string name="tb03c"> Son/Daughter </string>
    <string name="tb03d"> Son in law/Daughter in law </string>
    <string name="tb03e"> Grand child </string>
    <string name="tb03f"> Parents </string>
    <string name="tb03g"> Parents in law </string>
    <string name="tb03h"> Brotier/Sister </string>
    <string name="tb03i"> Brotier in law/Sister in law </string>
    <string name="tb03j"> Niece/Nephew </string>
    <string name="tb03k"> Grand Parents </string>
    <string name="tb03l"> Aunts/Uncle </string>
    <string name="tb03m"> Adopted/Step child </string>
    <string name="tb03n"> Domestic Servant </string>
    <string name="tb04"> جنس </string>
    <string name="tb05"> پيءُ جو نالو </string>
    <string name="tb06">  ماءُ جو نالو</string>
    <string name="tb07"> پيدائش جي تاريخ
    ڪارڊ/سرٽيفيڪٽ/ياداشت ذريعي پيدائش جي تاريخ لکو</string>
    <string name="tb08"> عمر </string>
    <string name="tb09"> تعليم </string>
    <string name="tb10"> ڌنڌو </string>
    <string name="td12a"> Housewife </string>
    <string name="td12b"> Professional /Managerial </string>
    <string name="td12c"> Clerical/technical </string>
    <string name="td12d"> Sales and Services </string>
    <string name="td12e"> Skilled manual </string>
    <string name="td12f"> Unskilled manual </string>
    <string name="td12g"> Agriculture </string>
    <string name="td12h"> Business </string>
    <string name="td12i"> Student</string>
    <string name="td12j"> Unemployed </string>
    <string name="td12k"> Retired </string>
    <string name="td12l"> Teacher </string>
    <string name="td1297"> Not Applicable </string>
    <string name="tb11"> ڇا (عورت جو نالو) جنهنجو ٻار گذريل پنجن سالن دوران وفات ڪري ويو هجي؟ </string>
    <string name="tb11a"> Single </string>
    <string name="tb11b"> Married </string>
    <string name="tb11c"> Unmarried </string>
    <string name="tb11d"> Widowed </string>
    <string name="tb11e"> Divorced/Separate </string>
    <string name="tb12"> مڪمل گھر ڀاتين جو تعداد </string>
    <string name="tb13"> گھر ۾ مڪمل شادي شده عورتن جو تعداد </string>
    <string name="tb14"> گھر ۾ پنجن سالن کان گھٽ عمر وارن ٻارن جو تعداد </string>
    <string name="tc0101"> Natural floor </string>
    <string name="tc0102"> Rudimentary floor </string>
    <string name="tc0103"> Finished floor </string>
    <string name="tc01"> فرش ڪهڙي قسم جو آهي </string>
    <string name="tc01a"> زمين / واري / مٽي </string>
    <string name="tc01b"> ڇيڻن جو ٿلهو يا راڳوو  </string>
    <string name="tc01c"> ڪاٺين جو فرش </string>
    <string name="tc01d"> بانس </string>
    <string name="tc01e"> پالش ٿيل ڪاٺ جو  </string>
    <string name="tc01f"> اسفالٽ سٽرپس </string>
    <string name="tc01g"> ٽائلس </string>
    <string name="tc01h"> سيمينٽ </string>
    <string name="tc01i"> قالين </string>
    <string name="tc01j"> سرن جو </string>
    <string name="tc01k"> چتائي </string>
    <string name="tc01l"> ماربل </string>
    <string name="tc0201"> Natural roof </string>
    <string name="tc0202"> Rudimentary roofing </string>
    <string name="tc0203"> Finished roofing </string>
    <string name="tc02"> ڇت ڪهڙي قسم جي آهي
    </string>
    <string name="tha01"> ڇا گذريل ٻن ھفتن جي دوران توھان جي گھر ۾ 5 سالن کان گھٽ عمر جي ٻارن کي دستن جي بيماري ٿي؟ </string>
    <string name="tha01a"> ھا </string>
    <string name="tha01b"> نه </string>
    <string name="tha0198"> خبر نه آھي </string>
    <string name="tha02"> گذريل ٻن ھفتن ۾ ڪيترن ٻارن کي دستن جي بيماري ٿي؟ </string>
    <string name="tha02num"> ٻارن جو تعداد </string>
    <string name="tha03"> گذريل ٻن ھفتن جي دوران توھان جي گھر ۾ ڪھڙي ٻارکي سڀني کان آخر۾ياويجھي عرصي ۾دستن جي بيماري ٿي ھئي؟ </string>
    <string name="tha03a"> ٻارجونالو </string>
    <string name="tha04"> (نالو) کي ڪيترن ڏينھن تائين دستن جي بيماري ھئي؟ </string>
    <string name="tha04num"> ڏينھن </string>
    <string name="tha05"> ڇا دستن ۾ رت آيو؟ </string>
    <string name="tha05a"> ھا </string>
    <string name="tha05b"> نه </string>
    <string name="tha0598"> خبر نه آھي </string>
    <string name="tha06"> ڇا توھان (نالو)جي دستن جي بيماري جو شروعاتي علاج ڪرايو؟ </string>
    <string name="tha06a"> ھا </string>
    <string name="tha06b"> نه </string>
    <string name="tha0698"> خبر نه آھي </string>
    <string name="tha07"> توھان (نالو) جي دستن جي بيماري جو شروعاتي علاج ڇو نه ڪرايو؟ </string>
    <string name="tha07a"> ايڏو وڏو مسئلو نه ھو </string>
    <string name="tha07b"> پئسا نه ھئا </string>
    <string name="tha07c"> سواري نه ھئي </string>
    <string name="tha07d"> مرد جي غيرموجودگي جي ڪري </string>
    <string name="tha07e"> گھر جي سربراھ/مڙس/سس جي اجازت نه ھئي </string>
    <string name="tha07f"> صحت مرڪز پري آھي </string>
    <string name="tha07g"> صحت مرڪز کليل نه ھو </string>
    <string name="tha07h"> غير معياري سھولتون </string>
    <string name="tha07i"> ٻيو ڪو وضاحت ڪريو </string>
    <string name="nextSection"> اڳيون سيڪشن </string>
    <string name="ti01"> ڇا (نالو) ڪڏھن به ٽڪا لڳرايا آھن جيڪي بيماري کان بچاءُ لاءِ لڳرايا ويندا آھن؟ بشمول مھم يا ٽڪن جي ڏيھاڙي يا ٻار جي صحت جو ڏيھاڙي </string>
    <string name="ti02"> ڪهڙي سبب جي ڪري اوهان پنهنجي ٻارکي ٽڪا نه لڳرايا آھن؟ </string>
    <string name="ti02a"> ڪوبه مشورو نه مليو </string>
    <string name="ti02b"> مذهبي سبب </string>
    <string name="ti02c"> ضروري نه سمجھو </string>
    <string name="ti02d"> ثقافتي سبب </string>
    <string name="ti02e"> حفاظتي ٽڪن لڳائڻ واروگھر ڪونه آيوھيو </string>
    <string name="ti02f"> ٻيا سبب </string>
</resources>