<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SectionGActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.ramshasaeed.tmk_midline19.activities.SectionGActivity" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/activity_section_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryAlpha"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <Spinner
                android:id="@+id/tiname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"></Spinner>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/ti01"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <RadioGroup
                android:id="@+id/ti01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ti01a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/ti01b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/ti0198"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/dkn" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrpti02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/ti02"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />


                <CheckBox
                    android:id="@+id/ti02a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02a" />

                <CheckBox
                    android:id="@+id/ti02b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02b" />

                <CheckBox
                    android:id="@+id/ti02c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02c" />

                <CheckBox
                    android:id="@+id/ti02d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02d" />
                <CheckBox
                    android:id="@+id/ti02e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02e" />
                <CheckBox
                    android:id="@+id/ti0296"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ti02f" />


                <EditText
                    android:id="@+id/ti0296x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                    android:hint="@string/other"
                    android:inputType="textCapWords"
                    android:visibility="gone" />

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.onBtnContinueClick()}"
                    android:text="@string/nextSection"
                    android:textColor="#1ed61e" />

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->


                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>