<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SectionInfoAnthroActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.ramshasaeed.tmk_midline19.activities.anthro.SectionInfoAnthroActivity" />
    </data>

    <ScrollView
        android:id="@+id/svseca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:text="SubVillages: "
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spSubVillages"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="35"
                    android:gravity="center"
                    android:popupBackground="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ta01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/ta01"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/ta01"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/ta05"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <com.santalu.widget.MaskEditText
                android:id="@+id/ta05h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="####-#"
                android:inputType="textCapCharacters"
                android:layoutDirection="ltr"
                android:maxLength="6"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                app:met_mask="####-#" />

            <Button
                android:id="@+id/checkHH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryAlpha"
                android:onClick="@{() -> callback.onCheckHHClick()}"
                android:text="Check HH Member Existance"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/fldGrpt03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:onClick="@{() -> callback.onBtnContinueClick()}"
                    android:text="@string/start_interview"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>